--- a/locales/pt/home.json
+++ b/locales/pt/home.json
@@ -1,5 +1,7 @@
 {
     "hero1": "A Iss:",
     "hero2": "Um passo mais perto do",
-    "hero3": "Infinito"
+    "hero3": "Infinito",
+
+    "draggable-helper": "Descubra os modulos da ISS arrastando"
 }
