--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -1,3 +1,6 @@
 {
-    "title": "something"
+    "switch": "Mudar para português",
+    "skip": "Pular para o conteúdo",
+    "newTab": "Abre em uma nova aba",
+    "404": "Página não encontrada"
 }
