feat: updated SEO headers

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -3,5 +3,9 @@
     "hero2": "One step closer to",
     "hero3": "infinity",
 
-    "draggable-helper": "Discover the ISS Modules by dragging"
+    "draggable-helper": "Discover the ISS Modules by dragging",
+
+    "title": "Where's the ISS? | One Step closer to Infinity",
+    "description": "Born from the human curiosity, the ISS is proof that not even the sky is a limit for us. See where the ISS is right now!",
+    "ogAlt": "View from the International Space Station"
 }
