--- a/locales/pt/home.json
+++ b/locales/pt/home.json
@@ -3,5 +3,9 @@
     "hero2": "Um passo mais perto do",
     "hero3": "Infinito",
 
-    "draggable-helper": "Descubra os modulos da ISS arrastando"
+    "draggable-helper": "Descubra os modulos da ISS arrastando",
+
+    "title": "Onde está a ISS? | Um passo mais perto do infinito",
+    "description": "Nascida da curiosidade humana, a ISS é a prova de que nem o céu é um limite para nós. Veja onde a ISS está agora mesmo!",
+    "ogAlt": "Vista da Estação Espacial Internacional"
 }
