feat: updated footer with new links and i18n

--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -2,5 +2,8 @@
     "switch": "Mudar para português",
     "skip": "Pular para o conteúdo",
     "newTab": "Abre em uma nova aba",
-    "404": "Página não encontrada"
+    "404": "Página não encontrada",
+
+    "footerText": "Feito com amor por "
+
 }
