--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,5 +2,7 @@
     "switch": "Change to english",
     "skip": "Skip to content",
     "newTab": "Opens in a new tab",
-    "404": "Page Not Found"
+    "404": "Page Not Found", 
+
+    "footerText": "Made with love by "
 }
