feat: added translation to site name

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -5,6 +5,7 @@
 
     "draggable-helper": "Discover the ISS Modules by dragging",
 
+    "siteName": "Where's the iss?",
     "title": "Where's the ISS? | One Step closer to Infinity",
     "description": "Born from the human curiosity, the ISS is proof that not even the sky is a limit for us. See where the ISS is right now!",
     "ogAlt": "View from the International Space Station",
