feat: added i18n to floatingPane

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,4 +1,7 @@
 {
+    "floatingPane": "The <abbr>ISS</abbr> is at:",
+    "abrrText": "International Space Station",
+
     "hero1": "The ISS:",
     "hero2": "One step closer to",
     "hero3": "infinity",
