--- a/locales/pt/home.json
+++ b/locales/pt/home.json
@@ -1,4 +1,7 @@
 {
+    "floatingPane": "A <abbr>ISS</abbr> está em:",
+    "abrrText": "International Space Station (Estação Espacial Internacional)",
+
     "hero1": "A Iss:",
     "hero2": "Um passo mais perto do",
     "hero3": "Infinito",
