feat: updated page title

--- a/locales/pt/home.json
+++ b/locales/pt/home.json
@@ -9,7 +9,7 @@
     "draggable-helper": "Descubra os modulos da ISS arrastando",
 
     "siteName": "Onde está a ISS?",
-    "title": "Onde está a ISS? | Um passo mais perto do infinito",
+    "title": "Onde está a ISS?",
     "description": "Nascida da curiosidade humana, a ISS é a prova de que nem o céu é um limite para nós. Veja onde a ISS está agora mesmo!",
     "ogAlt": "Vista da Estação Espacial Internacional",
 
