feat: updated OG images

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -11,7 +11,7 @@
     "siteName": "Where's the iss?",
     "title": "Where's the ISS?",
     "description": "Born from the human curiosity, the ISS is proof that not even the sky is a limit for us. See where the ISS is right now!",
-    "ogAlt": "View from the International Space Station",
+    "ogAlt": "Screenshot from the website",
 
     "band01thin": "Where's the ISS?",
 
