--- a/locales/pt/home.json
+++ b/locales/pt/home.json
@@ -11,7 +11,7 @@
     "siteName": "Onde está a ISS?",
     "title": "Onde está a ISS?",
     "description": "Nascida da curiosidade humana, a ISS é a prova de que nem o céu é um limite para nós. Veja onde a ISS está agora mesmo!",
-    "ogAlt": "Vista da Estação Espacial Internacional",
+    "ogAlt": "Captura de tela do website",
 
     "band01thin": "Onde está a ISS?",
 
